--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,8 +7,8 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Omline 24h</title>
-<meta content='https://imgur.com/XtKzOOE.png' property='og:image'/>
+<title>Er0tic 0utings</title>
+<meta content='https://i.imgur.com/Br7y5I7.jpg' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
@@ -51,8 +50,7 @@ No
 </div>
 <div class="step-item thishide" style="display: none;">
 <div class="question-title ">
-For Free Registration and <script type='text/javascript'>document.write(unescape('%43%30%47%45%52'))</script> with any Girl, press the ENTER button Below, and register for free on our private site by appointment, 
-We are live, with many <script type='text/javascript'>document.write(unescape('%67%61%6E%61%73%20%72%69%63%6F%20%61%6E%61%6C%2C%20%76%61%67%69%6E%61%6C%2C%20%74%72%69%6F%73%20%79%20%6D%61%73'))</script>.... </div>
+For Free Registration and FUCK with any Girl, press the ENTER button below, and make your free registration on our private site by appointment. We are live, looking forward to delicious anal, vaginal, threesomes and more... </div>
 <p>
 <b style="color: red;">
 </b>
@@ -63,7 +61,7 @@ We are live, with many <script type='text/javascript'>document.write(unescape('%
 </div>
 </div>
 <video autoplay muted loop id="VideoBg">
-<source src="https://cdn-dimi.akamaized.net/landings/282758/1693243588/images/4.mp4" type="video/mp4">
+<source src="https://cdn-dimi.akamaized.net/landings/282755/1693314076/images/4.mp4" type="video/mp4">
 </video>
 <script type="text/javascript">
       /*<![CDATA[*/    (function(w){
